--- a/index.html
+++ b/index.html
@@ -1,51 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Time Experience Calculator.</title>
+  <title>Time Experience Calculator</title>
   <style>
+    /* Google Fonts (optional) */
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
     body {
-      font-family: sans-serif;
+      font-family: 'Inter', 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #dbeafe, #f0f9ff);
+      color: #1e293b;
       padding: 2rem;
-      background: #e6f3f8;
-      color: #222;
+      margin: 0;
     }
+
     h1 {
-      color: #111;
+      color: #0f172a;
+      font-size: 2rem;
       margin-bottom: 1rem;
     }
-    input, button {
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      font-size: 1rem;
-    }
-    .result {
-      margin-top: 2rem;
-      background: #fff;
-      padding: 1rem 1.5rem;
-      border-radius: 0.5rem;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-    .section {
-      margin-top: 1.5rem;
-    }
-    .section h3 {
-      border-bottom: 2px solid #ccc;
+
+    label {
+      font-weight: 600;
       margin-bottom: 0.5rem;
-      padding-bottom: 0.25rem;
+      display: block;
     }
+
+    input[type="date"], button {
+      padding: 0.5rem;
+      margin: 0.5rem 0 1rem 0;
+      font-size: 1rem;
+      border-radius: 0.5rem;
+      border: 1px solid #cbd5e1;
+    }
+
+    button {
+      background-color: #38bdf8;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0ea5e9;
+    }
+
+    .result {
+      background: #ffffffee;
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+      margin-top: 2rem;
+    }
+
+    .section {
+      margin-top: 2rem;
+    }
+
+    .section h3 {
+      font-size: 1.2rem;
+      color: #0f172a;
+      border-left: 4px solid #38bdf8;
+      padding-left: 0.5rem;
+      margin-bottom: 1rem;
+    }
+
     .stat-line {
       display: flex;
       justify-content: space-between;
-      margin: 0.25rem 0;
+      margin: 0.3rem 0;
       font-family: monospace;
+      padding: 0.25rem 0.5rem;
+      border-bottom: 1px dashed #e2e8f0;
+      transition: background 0.2s ease;
+    }
+
+    .stat-line:hover {
+      background-color: #f1f5f9;
+    }
+
+    @media (max-width: 600px) {
+      .stat-line {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
   </style>
 </head>
 <body>
 
   <h1>Time Experience Calculator</h1>
-  <label for="birthday">Enter your birthday:</label><br>
-  <input type="date" id="birthday"><br>
+
+  <label for="birthday">Enter your birthday:</label>
+  <input type="date" id="birthday">
+  <br>
   <button onclick="startExperience()">Calculate</button>
 
   <div class="result" id="results"></div>
