--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Time Experience Calculator</title>
   <style>
     /* Google Fonts (optional) */
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    
     body {
       font-family: 'Inter', 'Segoe UI', sans-serif;
       background: linear-gradient(to right, #dbeafe, #f0f9ff);
