--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Time Experience Calculator</title>
+  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
-    /* Google Fonts (optional) */
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    
+    /* General Body & Font Styles */
     body {
       font-family: 'Inter', 'Segoe UI', sans-serif;
       background: linear-gradient(to right, #dbeafe, #f0f9ff);
       color: #1e293b;
       padding: 2rem;
       margin: 0;
+      max-width: 700px;
+      margin: 0 auto;
     }
 
     h1 {
@@ -45,14 +51,22 @@
       background-color: #0ea5e9;
     }
 
+    /* Fade-In Animation */
     .result {
       background: #ffffffee;
       padding: 2rem;
       border-radius: 1rem;
       box-shadow: 0 8px 24px rgba(0,0,0,0.08);
       margin-top: 2rem;
+      animation: fadeIn 0.5s ease-in-out;
     }
 
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Section and Header Styling */
     .section {
       margin-top: 2rem;
     }
@@ -65,6 +79,7 @@
       margin-bottom: 1rem;
     }
 
+    /* Flex for Results Display */
     .stat-line {
       display: flex;
       justify-content: space-between;
@@ -79,6 +94,26 @@
       background-color: #f1f5f9;
     }
 
+    /* Dark Mode Styling */
+    body.dark-mode {
+      background: #1f2937;
+      color: #f9fafb;
+    }
+
+    body.dark-mode .result {
+      background: #374151;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.2);
+    }
+
+    body.dark-mode button {
+      background-color: #4b5563;
+    }
+
+    body.dark-mode button:hover {
+      background-color: #6b7280;
+    }
+
+    /* Mobile View */
     @media (max-width: 600px) {
       .stat-line {
         flex-direction: column;
@@ -90,11 +125,10 @@
 <body>
 
   <h1>Time Experience Calculator</h1>
-
   <label for="birthday">Enter your birthday:</label>
-  <input type="date" id="birthday">
-  <br>
+  <input type="date" id="birthday"><br>
   <button onclick="startExperience()">Calculate</button>
+  <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
 
   <div class="result" id="results"></div>
 
@@ -181,8 +215,10 @@
           ${stat("Rain Fallen (mm)", totalRain)}
         </div>
       `;
+    }
 
-      requestAnimationFrame(updateAll);
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark-mode');
     }
   </script>
 
