--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     /* General Body & Font Styles */
     body {
-      font-family: 'Inter', 'Segoe UI', sans-serif;
+      font-family: 'Inter', sans-serif;
       background: linear-gradient(to right, #dbeafe, #f0f9ff);
       color: #1e293b;
       padding: 2rem;
