--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
 
     function toggleDarkMode() {
       document.body.classList.toggle('dark-mode');
+     requestAnimationFrame(updateAll);
     }
   </script>
 
