--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
       color: #f9fafb;
     }
 
+    h1.dark-mode {
+      color: #f9fafb;
+      }
+
     body.dark-mode .result {
       background: #374151;
       box-shadow: 0 8px 24px rgba(0,0,0,0.2);
