--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
-    /* General Body & Font Styles */
     body {
       font-family: 'Inter', 'Segoe UI', sans-serif;
       background: linear-gradient(to right, #dbeafe, #f0f9ff);
       color: #1e293b;
       padding: 2rem;
-      margin: 0;
-      max-width: 700px;
       margin: 0 auto;
+      max-width: 700px;
     }
 
     h1 {
       color: #0f172a;
       font-size: 2rem;
       margin-bottom: 1rem;
+    }
+
+    body.dark-mode h1 {
+      color: #f9fafb;
     }
 
     label {
@@ -51,7 +53,6 @@
       background-color: #0ea5e9;
     }
 
-    /* Fade-In Animation */
     .result {
       background: #ffffffee;
       padding: 2rem;
@@ -66,7 +67,6 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* Section and Header Styling */
     .section {
       margin-top: 2rem;
     }
@@ -79,7 +79,6 @@
       margin-bottom: 1rem;
     }
 
-    /* Flex for Results Display */
     .stat-line {
       display: flex;
       justify-content: space-between;
@@ -94,15 +93,10 @@
       background-color: #f1f5f9;
     }
 
-    /* Dark Mode Styling */
     body.dark-mode {
       background: #1f2937;
       color: #f9fafb;
     }
-
-    heading.dark-mode {
-      color: #f9fafb;
-      }
 
     body.dark-mode .result {
       background: #374151;
@@ -117,7 +111,6 @@
       background-color: #6b7280;
     }
 
-    /* Mobile View */
     @media (max-width: 600px) {
       .stat-line {
         flex-direction: column;
@@ -131,7 +124,6 @@
   <h1>Time Experience Calculator</h1>
   <label for="birthday">Enter your birthday:</label>
   <input type="date" id="birthday">
-
   <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
 
   <div class="result" id="results"></div>
@@ -140,7 +132,6 @@
     let birthdayGlobal = null;
     let animating = false;
 
-    // Automatically update when the date is selected
     document.getElementById('birthday').addEventListener('change', startExperience);
 
     function startExperience() {
@@ -151,7 +142,6 @@
         return;
       }
       birthdayGlobal = birthday;
-
       if (!animating) {
         animating = true;
         requestAnimationFrame(updateAll);
@@ -160,6 +150,13 @@
 
     function stat(label, value) {
       return `<div class="stat-line"><span>${label}</span><span>${value}</span></div>`;
+    }
+
+    function formatNumber(n, digits = 2) {
+      return Number(n).toLocaleString(undefined, {
+        minimumFractionDigits: digits,
+        maximumFractionDigits: digits
+      });
     }
 
     function updateAll() {
@@ -176,43 +173,43 @@
 
       const milliseconds = msLived.toLocaleString();
       const breaths = Math.floor(minutes * 16).toLocaleString();
-      const mercuryYear = (days / 88).toFixed(2);
-      const venusYear = (days / 225).toFixed(2);
-      const marsYear = (days / 687).toFixed(2);
-      const jupiterYear = (days / 4333).toFixed(2);
-      const saturnYear = (days / 10759).toFixed(2);
-      const uranusYear = (days / 30687).toFixed(2);
-      const neptuneYear = (days / 60190).toFixed(2);
-      const lolYear = (days / 69420).toFixed(6);
+      const mercuryYear = days / 88;
+      const venusYear = days / 225;
+      const marsYear = days / 687;
+      const jupiterYear = days / 4333;
+      const saturnYear = days / 10759;
+      const uranusYear = days / 30687;
+      const neptuneYear = days / 60190;
+      const lolYear = days / 69420;
       const blinks = Math.floor(minutes * 20).toLocaleString();
-      const moonCycles = (days / 29.5).toFixed(2);
+      const moonCycles = days / 29.5;
       const heartbeats = Math.floor(minutes * 70).toLocaleString();
-      const sunrises = Math.floor(days);
+      const sunrises = Math.floor(days).toLocaleString();
       const avgRainPerDay = 2.5;
       const totalRain = Math.floor(days * avgRainPerDay).toLocaleString();
 
       document.getElementById('results').innerHTML = `
         <div class="section">
           <h3>Basic Time Stats</h3>
-          ${stat("Years", years.toFixed(2))}
-          ${stat("Months", months.toFixed(2))}
-          ${stat("Days", days.toFixed(2))}
-          ${stat("Hours", hours.toFixed(2))}
-          ${stat("Minutes", minutes.toFixed(2))}
-          ${stat("Seconds", seconds.toFixed(2))}
+          ${stat("Years", formatNumber(years))}
+          ${stat("Months", formatNumber(months))}
+          ${stat("Days", formatNumber(days))}
+          ${stat("Hours", formatNumber(hours))}
+          ${stat("Minutes", formatNumber(minutes))}
+          ${stat("Seconds", formatNumber(seconds))}
           ${stat("Milliseconds", milliseconds)}
         </div>
 
         <div class="section">
           <h3>Planetary Years</h3>
-          ${stat("Mercury Years", mercuryYear)}
-          ${stat("Venus Years", venusYear)}
-          ${stat("Mars Years", marsYear)}
-          ${stat("Jupiter Years", jupiterYear)}
-          ${stat("Saturn Years", saturnYear)}
-          ${stat("Uranus Years", uranusYear)}
-          ${stat("Neptune Years", neptuneYear)}
-          ${stat("lol Years (nice)", lolYear)}
+          ${stat("Mercury Years", formatNumber(mercuryYear))}
+          ${stat("Venus Years", formatNumber(venusYear))}
+          ${stat("Mars Years", formatNumber(marsYear))}
+          ${stat("Jupiter Years", formatNumber(jupiterYear))}
+          ${stat("Saturn Years", formatNumber(saturnYear))}
+          ${stat("Uranus Years", formatNumber(uranusYear))}
+          ${stat("Neptune Years", formatNumber(neptuneYear))}
+          ${stat("lol Years (nice)", formatNumber(lolYear, 6))}
         </div>
 
         <div class="section">
@@ -224,13 +221,12 @@
 
         <div class="section">
           <h3>Cosmic & Earth Events</h3>
-          ${stat("Moon Phases Passed", moonCycles)}
+          ${stat("Moon Phases Passed", formatNumber(moonCycles))}
           ${stat("Sunrises Seen", sunrises)}
           ${stat("Rain Fallen (mm)", totalRain)}
         </div>
       `;
 
-      // Keep updating the stats
       requestAnimationFrame(updateAll);
     }
 
