--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
     body.dark-mode h1 {
       color: #f9fafb;
     }
+    body.dark-mode h3 {
+      color: #f9fafb;
+    }
     body.dark-mode button:hover {
       background-color: #6b7280;
     }
