--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     body.dark-mode h1 {
       color: #f9fafb;
     }
-    body.dark-mode h3 {
+    body.dark-mode .section h3 {
       color: #f9fafb;
     }
     body.dark-mode button:hover {
